--- a/src/components/Canvas.css
+++ b/src/components/Canvas.css
@@ -25,7 +25,6 @@
 
 @media (max-width: 768px) {
   .canvas-wrapper {
-    height: calc(100dvh - 44px - 50vh);
-    width: 100%;
+    height: 100%;
   }
 }
